# agentic-issues

./: .gitignore  README.md  issues.json  pyproject.toml  setup.py
docs/: DESIGN.md  DIRECTORY_STRUCTURE.md  MANUAL.md  PLAN.md  README.md
scripts/: create_test_issue.py  install_ag_issues.py
src/agentic_issues/: __init__.py  ag_issues.py  cli.py  models.py  storage.py
tests/: test_cli.py
